Clean architecture - UseCases
