# src/routes/categories.routes.ts
@@ -1,25 +1,25 @@
 import { Router } from 'express';
 import multer from 'multer';
-import {
-  createCategoryController,
-  listCategoriesController,
-} from '../shared/container';
-// import { importCategoryController } from '../modules/cars/useCases/importCategory';
+import { CreateCategoryController } from '../modules/cars/useCases/createCategory/CreateCategoryController';
+import { ImportCategoryController } from '../modules/cars/useCases/importCategory/ImportCategoryControlle';
+import { ListCategoriesController } from '../modules/cars/useCases/listCategories/ListCategoriesController';
 
 const categoriesRoutes = Router();
 
 const upload = multer({ dest: './tmp' });
 
-categoriesRoutes.post('/', (req, res) => {
-  return createCategoryController.handle(req, res);
-});
+const createCategoryController = new CreateCategoryController();
+const listCategoriesController = new ListCategoriesController();
+const importCategoryController = new ImportCategoryController();
 
-categoriesRoutes.get('/', (req, res) => {
-  return listCategoriesController.handle(req, res);
-});
+categoriesRoutes.post('/', createCategoryController.handle);
 
-// categoriesRoutes.post('/import', upload.single('file'), (req, res) => {
-//   return importCategoryController.handle(req, res);
-// });
+categoriesRoutes.get('/', listCategoriesController.handle);
+
+categoriesRoutes.post(
+  '/import',
+  upload.single('file'),
+  importCategoryController.handle
+);
 
 export { categoriesRoutes };
